tests/cases/compiler/conditionalExpression1/index.ts
var x: boolean = (true ? 1 : "");
//~^ ERROR: Type 'number | string' is not assignable to type 'boolean'.